--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<header id="header">
 						<h1>Jahangir Ismail</h1>
 						<h3>hijahangir@hotmail.com</h3>
-						<p>Software Engineer &nbsp;&bull;&nbsp; Java Developer &nbsp;&bull;&nbsp; Forged under the Sun</p>
+						<p>Software Engineer &nbsp;&bull;&nbsp; Java Programmer &nbsp;&bull;&nbsp; Forged under the Sun</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
