--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<li>  <a href="landing.html" class="icon solid fa fa-home">  <span class="label">Landing Page</span></a> </li>
 							<!-- 	<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://github.com/dr-scooby" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
