--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li>  <a href="p1/index.html" class="icon solid fa fa-home">  <span class="label">Landing Page 1</span></a> </li>
+								<li>  <a href="p1/landing.html" class="icon solid fa fa-home">  <span class="label">Landing Page 1</span></a> </li>
 								<li>  <a href="p2/index.html" class="icon solid fa fa-home">  <span class="label">Landing Page 2</span></a> </li>
 							<!-- 	<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
