--- a/p2/index.html
+++ b/p2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resposonsive Portfolio Website</title>
+    <title>J. Ismail Portfolio Website</title>
     <link rel="stylesheet" href="sytle.css">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -64,7 +64,9 @@
     </div>
 
     <div class="about-content">
-        <h3>Full Stack Java Developer</h3>
+        <div class="text-animate">
+            <h3>Full Stack Java Developer</h3>            
+        </div>
         <p>Living in Vancouver, Canada. Spending my time learning new technologies. Design, databases, programming.
             Anything to do with the IT, I'll learn it. Currently learning about AWS cloud infrastucture.
         </p>
