updated the index.html in p2

--- a/p2/index.html
+++ b/p2/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">J. Ismail</a>
+        <a href="#" class="logo">J. Ismail aka Dr.Scooby</a>
 
         <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -69,6 +69,9 @@
         </div>
         <p>Living in Vancouver, Canada. Spending my time learning new technologies. Design, databases, programming.
             Anything to do with the IT, I'll learn it. Currently learning about AWS cloud infrastucture.
+        </p>
+        <p>I am a student of knowledge. Other interests include learning Arabic, philosophy, language, Islamic scienes/law, logic.
+            A practioner of Martial Arts, kickboxing, muay-thai.
         </p>
 
         <div class="btn-box btns">
